# RemoteTaskExecution

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
benchmarks/: grpc_system.py  local_system.py
doc/distributed/: client.py  server.py  worker.py
doc/local/: example.py
rte/: __init__.py  client.py  create_proto.bat  entities.py  grpc_server.py  heartbeat.py  id_generator.py  remote_server.py  rte.proto  rte_pb2.py  rte_pb2_grpc.py  server.py  worker.py
tests/: stubs.py  test_client.py  test_grpc.py  test_heartbeat.py  test_id_generator.py  test_server.py  test_server_client.py  test_server_worker.py  test_system.py  test_worker.py
